# doxreqcpp

./: CMakeLists.txt  Doxyfile.in  README.md
src/: main.cpp  math_function.cpp  math_function.hpp
